--- a/01_trocarVariaveis.html
+++ b/01_trocarVariaveis.html
@@ -6,10 +6,13 @@
     */
 
     //ENTRADA
-
+    const numUm = prompt("informe um numero")
+    const numDois = prompt("informe um numero")
     //PROCESSAMENTO
 
     //SAÍDA
+    alert(`Antes da troca: ${numUm}, ${numDois}`);
+    alert(`Depois da troca: ${numDois}, ${numUm}`)
 
     
 </script>
