--- a/03_turnoEstudo.html
+++ b/03_turnoEstudo.html
@@ -12,9 +12,22 @@
     */
 
     //ENTRADA
+    const turno = prompt("Em qual turno você estuda? Responda com M-matutino ou V-Vespertino ou N-Noturno.").trim().toUpperCase()
 
     
     //PROCESSAMENTO
+    if(turno == "M") {
+        alert(`Bom Dia!`)
+    }
+    else if (turno == "V") {
+        alert (`Boa Tarde!`)
+    }
+    else if (turno == "N") {
+        alert(`Boa Noite!`)
+    }
+    else {
+        alert(`Valor Invalido!`)
+    }
 
     
     //SAÍDA
