--- a/08_testaLados.html
+++ b/08_testaLados.html
@@ -3,9 +3,17 @@
     // Receba os três lados de um triângulo. Informe se os valores podem ser um triângulo. Indique, caso os lados formem um triângulo, se o mesmo é: equilátero, isósceles ou escaleno. Dica: pesquise sobre a regra para saber se os lados formam um triângulo e também sobre os tipos de triângulos.
 
     //Entrada
+    let numUm = Number (prompt("Informe a medida de um lado"))
+
+    let numDois = Number (prompt("Informe a medida de um lado"))
+
+    let numTres = Number (prompt("Informe a medida de um lado"))
 
 
     //Processamento
+    if (numDois > numTres) {
+        
+    }
 
 
     //Saída
