--- a/09_operacaoMatematica.html
+++ b/09_operacaoMatematica.html
@@ -38,7 +38,7 @@
     else {
         info += `Esse número é impar`
     }
-    if (resultado >= 0) {
+    if (resultado > 0) {
         info += `, positivo`
     }
     else if (resultado<0){
