--- a/15_numeroInteiroDecimal.html
+++ b/15_numeroInteiroDecimal.html
@@ -6,9 +6,20 @@
     */
 
     //ENTRADA
+    const num = Number(prompt(`informe um número`).trim().replace(",","."))
+
 
 
     //PROCESSAMENTO
+    if (Number.isInteger(num)) {
+         alert(`É um número inteiro`)
+     }
+     else if (!Number.isInteger(num)) {
+         alert(`É um número decimal`)
+     }
+     else {
+        alert(`Valor inválido`)
+     }
 
     
     //SAÍDA
