--- a/18_estacaoAno.html
+++ b/18_estacaoAno.html
@@ -6,9 +6,50 @@
     */
 
     //ENTRADA
+    const hemisferio = prompt(`Informe o seu hemisfério. (Responda com S para sul e N para norte)`).trim().toLowerCase();
+    const mes = Number(prompt(`Informe o mês atual. (Responda com número como janeiro = 1)`).trim());
+
 
 
     //PROCESSAMENTO
+    if (hemisferio == "s") {
+        if (mes > 3 && mes <= 6) {
+            alert(`É outono`)
+        }
+        else if (mes > 6 && mes <= 9) {
+           alert(`É inverno`)
+        }
+        else if (mes > 9 && mes <= 12) {
+            alert(`É primavera`)
+        }
+        else if (mes > 0 && mes <= 3) {
+            alert(`É verão`)
+        }
+        else {
+            alert(`Mês inválido`)
+        }
+    }
+    else if (hemisferio == "n") {
+        if (mes > 3 && mes <= 6) {
+            alert(`É primavera`)
+        }
+        else if (mes > 6 && mes <= 9) {
+            alert(`É verão`)
+        }
+        else if (mes > 9 && mes <= 12) {
+            (`É outono`)
+        }
+        else if (mes > 0 && mes <= 3) {
+            alert(`É inverno`)
+        }
+        else {
+            alert(`Mês inválido`)
+        }
+    }
+    else {
+        alert(`Hemisfério inválido`)
+    }
+
 
     
     //SAÍDA
