--- a/01_trocarVariaveis.html
+++ b/01_trocarVariaveis.html
@@ -9,6 +9,9 @@
     const numUm = prompt("informe um numero")
     const numDois = prompt("informe um numero")
     //PROCESSAMENTO
+    const troca = numUm
+    numUm = numDois
+    numDois = troca
 
     //SAÍDA
     alert(`Antes da troca: ${numUm}, ${numDois}`);
