--- a/05_validaParImpar.html
+++ b/05_validaParImpar.html
@@ -5,7 +5,7 @@
     */
 
     //ENTRADA
-    let num = Number( prompt("Informe um numero"))
+    let num = Number( prompt("Informe um numero").replace(",", ".")
 
     
     //PROCESSAMENTO
