--- a/06_numeroCen_Dez_Uni.html
+++ b/06_numeroCen_Dez_Uni.html
@@ -11,7 +11,7 @@
     */
 
     //ENTRADA
-    const numero = Number(prompt(`Informe um número inteiro menor que 1000:`));
+    const numero = Number(prompt(`Informe um número inteiro menor que 1000:`).replace(",", "."));
 
     //PROCESSAMENTO
     if (numero < 1000) {
